--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>jersey-client</artifactId>
 			<version>2.14</version>
 		</dependency>	
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.faces</artifactId>
+			<version>2.2.8</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
   <build>
 		<resources>
