--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<version>2.2.8</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.1</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<resources>
